--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="c:/users/lprat/documents/github/css/css-introduction/index.css">
+  <link rel="stylesheet" href="./index.css">
   <title>Lisa</title>
 </head>
 <body>
