--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <li>Games
     <ul>
       <li>Fantasy games</li>
+      <li>D&D</li>
+      <li>Critical Role</li>
     </ul>
   </li>
   <li>Movies
@@ -77,7 +79,7 @@
 <h6>The win is worth the pain. But not to loud.</h6>
 
 <div class="end">
- <a href="url">Previous</a> Lisa Prat Rivero <a href="url">Next</a>
+ <a href="https://lawrencegorris.github.io/css-introduction/"><--- Previous </a> Lisa Prat Rivero <a href="url"> Next ---> </a>
 </div>
 
 </body>
