--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <h6>The win is worth the pain. But not to loud.</h6>
 
 <div class="end">
- <a href="https://lawrencegorris.github.io/css-introduction/"><--- Previous </a> Lisa Prat Rivero <a href="url"> Next ---> </a>
+ <a href="https://lawrencegorris.github.io/css-introduction/"><--- Previous </a> Lisa Prat Rivero <a href="https://marimizutani.github.io/css-introduction/"> Next ---> </a>
 </div>
 
 </body>
